#5 Updating README to reflect properties definition